<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cgordon.kwjiujitsu.AddCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_member"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/member_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/member_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/member_number"
            android:inputType="number"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancel"
                android:text="@string/cancel"
                android:id="@+id/cancel_button"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addMember"
                android:text="@string/add"
                android:id="@+id/add_button"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/progressBar"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/progressText"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:text="@string/generating_qr_code"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
